force-app/main/default/objects/LeadClientInsurance__c/LeadClientInsurance__c.object-meta.xml
<CustomObject>
    <label>Lead and Client Insurance</label>
    <nameField>
        <label>LeadClient Insurance Information</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead and Client Insurance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>