force-app/main/default/objects/LeadClientInsurance__c/fields/ACA_COBRA__c.field-meta.xml
<CustomField>
    <fullName>ACA_COBRA__c</fullName>
    <label>ACA/COBRA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>