force-app/main/default/objects/LeadClientInsurance__c/fields/Carveout_Type__c.field-meta.xml
<CustomField>
    <fullName>Carveout_Type__c</fullName>
    <label>Carveout Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_this_a_carve_out_plan__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Health benefit Plan Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>