force-app/main/default/objects/LeadClientInsurance__c/fields/Coverage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_End_Date__c</fullName>
    <label>Coverage End Date</label>
    <type>Date</type>
</CustomField>