force-app/main/default/objects/LeadClientInsurance__c/fields/Coverage_Start_Dates__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Start_Dates__c</fullName>
    <label>Coverage Start Date</label>
    <type>Date</type>
</CustomField>