force-app/main/default/objects/LeadClientInsurance__c/fields/Insurance_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Carrier</label>
    <referenceTo>VerifyTx_VTX_Payer_Detail__c</referenceTo>
    <relationshipLabel>Lead and Client Insurance (Insurance Carrier)</relationshipLabel>
    <relationshipName>Lead_and_Client_Insurance1</relationshipName>
    <type>Lookup</type>
</CustomField>