force-app/main/default/objects/LeadClientInsurance__c/fields/Insurance_Priority__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Priority__c</fullName>
    <label>Insurance Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondry</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>