force-app/main/default/objects/LeadClientInsurance__c/fields/Is_this_a_carve_out_plan__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_carve_out_plan__c</fullName>
    <label>Is this a carve-out plan?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>