force-app/main/default/objects/LeadClientInsurance__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead and Client Insurance</relationshipLabel>
    <relationshipName>Lead_and_Client_Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>