force-app/main/default/objects/LeadClientInsurance__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payer</label>
    <referenceTo>VerifyTx_VTX_Payer_Detail__c</referenceTo>
    <relationshipLabel>Lead and Client Insurance</relationshipLabel>
    <relationshipName>Lead_and_Client_Insurance</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>