force-app/main/default/objects/LeadClientInsurance__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan #</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>