force-app/main/default/objects/LeadClientInsurance__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <label>Plan Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BCBS_Plan_Names</valueSetName>
    </valueSet>
</CustomField>