force-app/main/default/objects/LeadClientInsurance__c/fields/Pt_Relationship_to_Insured__c.field-meta.xml
<CustomField>
    <fullName>Pt_Relationship_to_Insured__c</fullName>
    <label>Pt Relationship to Insured</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>