force-app/main/default/objects/LeadClientInsurance__c/validationRules/carve_out_plan.validationRule-meta.xml
<ValidationRule>
    <fullName>carve_out_plan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Is_this_a_carve_out_plan__c, &apos;No&apos;))</errorConditionFormula>
    <errorDisplayField>Coverage_End_Dates__c</errorDisplayField>
    <errorMessage>Its not a arve out plan.</errorMessage>
</ValidationRule>