force-app/main/default/objects/LeadClientInsurance__c/validationRules/Check_is_that_a_carve_out_plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_is_that_a_carve_out_plan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Is_this_a_carve_out_plan__c,&apos;No&apos;))</errorConditionFormula>
    <errorDisplayField>Payer__c</errorDisplayField>
    <errorMessage>Check is that a carve out plan?</errorMessage>
</ValidationRule>